@@ -1,3 +1,8 @@
+Sun Aug  2 12:16:34 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
+
+	* lib/Mj/Resend.pm (_check_mime): Don't check the top level.
+	(_r_ck_body): Generate more appropriate part names.
+
 Sat Aug  1 09:28:18 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
 
 	* lib/Majordomo.pm: Bump version number.
